fieldx/tests/uncompilable/1.78/incompat_field_args.stderr
error: Conflicting arguments 'lazy', 'optional' from group 'field mode' cannot be used at the same time at foo
 --> tests/uncompilable/incompat_field_args.rs
  |
  | #[fxstruct]
  | ^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `fxstruct` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Argument 'lazy' is located here
 --> tests/uncompilable/incompat_field_args.rs
  |
  |     #[fieldx(lazy, optional)]
  |              ^^^^

error: Argument 'optional' is located here
 --> tests/uncompilable/incompat_field_args.rs
  |
  |     #[fieldx(lazy, optional)]
  |                    ^^^^^^^^
